# ups-marl-benchmark

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  Research_Project_CharbelAbiHana.ipynb  SML_CharbelAbiHana_Project.html  SML_CharbelAbiHana_Project.ipynb  env_config.py  environment.yml  main.py  pyproject.toml  run_docker.sh  run_jupyter.sh
agents/: agent.py
data/: PosterTemplate-SOE.pptx  Research_Project_CharbelAbiHana.ipynb
example/: 18_reinforcement_learning.ipynb  env_render.ipynb
gym-results/: openaigym.episode_batch.4.34084.stats.json  openaigym.manifest.0.19676.manifest.json  openaigym.manifest.4.34084.manifest.json  openaigym.video.0.19676.video000000.meta.json  openaigym.video.4.34084.video000000.meta.json  openaigym.video.4.34084.video000001.meta.json
scripts/: abstract.py  run_docker.sh
videos/: rl-video-episode-1.meta.json  rl-video-episode-10.meta.json  rl-video-episode-100.meta.json  rl-video-episode-105.meta.json  rl-video-episode-108.meta.json  rl-video-episode-11.meta.json  rl-video-episode-112.meta.json  rl-video-episode-113.meta.json  rl-video-episode-116.meta.json  rl-video-episode-117.meta.json  rl-video-episode-119.meta.json  rl-video-episode-12.meta.json  rl-video-episode-120.meta.json  rl-video-episode-122.meta.json  rl-video-episode-125.meta.json  rl-video-episode-128.meta.json  rl-video-episode-129.meta.json  rl-video-episode-131.meta.json  rl-video-episode-132.meta.json  rl-video-episode-134.meta.json  rl-video-episode-136.meta.json  rl-video-episode-138.meta.json  rl-video-episode-14.meta.json  (+277 more)
(+335 files in other folders)
