[tool.poetry]
name = "ups-marl-benchmark"
version = "0.1.0"
description = "Multi-Agent Reinforcement Learning algorithms benchmark on the highway-env"
authors = ["Charbel Abi Hana <charbel-a-h@outlook.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
gym = "0.22.0"
torch = "1.11.0"
jupyter = "1.0.0"
highway-env = "1.5"
tensorboardX = "2.2"
tensorboard = "1.14.0"
pfrl = "0.3.0"
matplotlib = "3.5.2"
numpy = "1.21.6"
tqdm = "4.64.0"
PyVirtualDisplay = "^3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
